fixed an issue where the about image was overflowing to the right side, changed font's display prop from swap to block, changed card heading from h2 to text

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Nunito&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Nunito&display=block');
 
 html,
 body {
@@ -7,8 +7,8 @@ body {
   padding: 0;
   margin: 0;
   outline: none;
-  font-family: 'Nunito', -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu,
-    Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: 'Nunito', -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans,
+    Helvetica Neue, sans-serif;
 }
 
 a {
@@ -28,6 +28,10 @@ button,
   box-shadow: 0 0 0 0 rgba(0, 0, 0, 0) !important;
 }
 
+h2 {
+  font-family: 'Nunito';
+}
+
 * {
   box-sizing: border-box;
   font-family: 'Nunito';
@@ -36,9 +40,11 @@ button,
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
+    font-family: 'Nunito';
   }
   body {
     color: white;
     background: black;
+    font-family: 'Nunito';
   }
 }
